# DreamInEngineTMP

./: .doxygen.txt  .gitignore  CMakeLists.txt  DreamInEngine.sln  DreamInEngine.vcxproj  DreamInEngine.vcxproj.filters  README.md  imgui.ini  main.cpp
assets/: CMakeLists.txt
include/: GLFWEnvironment.h  ResourceManager.h  SpriteRenderer.h
include/HUD/: ImGuiHUD.h  popups.h
include/components/: ComponentTypes.h  Shader.h  Sprite.h  Texture.h
include/events/: EventSubscriber.h  Events.h
include/scenes/: Scene.h  SceneManager.h
include/systems/: BoxPhysicsSystem.h  InputSystem.h  PlayerControl.h  System.h
include/utils/: filesystem.h
libs/Box2D/Box2D/: CMakeLists.txt
libs/imgui-1.64/include/ImGui/: imgui.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.cpp~RFa2cd4e.TMP  imgui_widgets.cpp
other/: ShaderManager.cpp  ShaderManager.h  ShaderProgram.h
src/: CMakeLists.txt  GLFWEnvironment.cpp  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.cpp  main.cpp  mainX.cpp
src/HUD/: CMakeLists.txt  ImGuiHUD.cpp  ImGuiHUD.cpp~RF4dfb98a.TMP  menubar.h  popups.h
src/components/: BoxPhysics.cpp  CMakeLists.txt  ContactListener.cpp  Input.cpp  Input.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h
src/entities/: CMakeLists.txt
src/events/: CMakeLists.txt  Events.h
src/scenes/: CMakeLists.txt  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/systems/: BoxPhysicsSystem.cpp  BoxPhysicsSystem.h  CMakeLists.txt  InputSystem.cpp  PlayerControl.cpp  PlayerControl.h  System.cpp
src/utils/: CMakeLists.txt  fps.cpp  fps.h  types.cpp
